--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -5,8 +5,8 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 
   {# Grab the title and description from the CMS general settings. #}
-  {% set site_title = getSetting('siteName')%}
-  {% set site_description = getSetting('siteDescription')%}
+  {% set site_title = getSetting('site_name')%}
+  {% set site_description = getSetting('site_description')%}
 
   <head>
     <meta charset="utf-8">
