add block for search script

--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -66,6 +66,7 @@
         <script src="/static/javascript/bootstrap/bootstrap.js"></script>
       <!-- endbuild -->
 
+      {% block scripts_extra %}{% endblock %}
 
       {# Google Analytics code. Feel free to remove. #}
       <script>
